--- a/public/css/catalogoProducto.css
+++ b/public/css/catalogoProducto.css
@@ -185,40 +185,44 @@ body {
 }
 
 .productos {
+    display: flex;
+    flex-flow: column wrap;
     text-align:center;
 }
 .products_principal {
     display: flex;
-    justify-content: flex-start; 
+    justify-content:center; 
     margin-top: 20px;
    
 }
 .contenido_producto {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    padding: 30px;
+    align-items: center;
+    padding: 20px;
 }
 
 /* Estilo para la imagen principal */
-.products_principal img {
-    width: 680px;
-    height: 680px;
-    cursor: pointer;
-    margin-bottom: 10px; 
-    padding: 30px;
-}
 
+.products_principal img {
+    width: 580px;
+    height: 600px;
+    cursor: pointer;
+    margin-bottom: 5px; 
+    padding: 5px;
+
+}
 
 .titulo {
     font-size: 24px;
     margin-top: 0;
+    text-align: center;
     
 }
 
 /* Estilo para el texto de descripción */
 .descrpcion_producto {
-    max-width: 500px;
+    max-width: 100%;
     font-size: 14px;
     text-align: justify; 
     font-family: "Lora, serif";
@@ -226,30 +230,24 @@ body {
 
 /* Estilo para las imágenes adicionales */
 
-.imagenes-adicionales {
-    display: flex;
-    justify-content: flex-start; 
-    align-items: flex-start;
-    padding-left: 10px;
-}
 .imagenes-adicionales img {
-    width: 150px;
-    height: 150px;
+    width: 30%;
+    height:auto;
     cursor: pointer;
     margin: 5px; 
-    padding-left: 10px;
+    
+
 }
-/* caja padre de la imagen principal y logo de compra*/
+
 .imgPrinc-carrito {
     position: relative;
     margin-top: 20px;
 }
 
-/* caja del logo compra-camion*/
 .icono-truck {
     position: absolute;
-    top: 40px;
-    right: 40px; 
+    top: 15px;
+    right: 10px; 
     padding: 10px;
     border-radius: 50%; 
     border-color: green;
@@ -258,20 +256,62 @@ body {
     text-decoration: none;
     border: 2px solid green;
 }
-/* estilo al elemento camion*/
+
 .icono-truck i {
-    font-size: 30px; 
+    font-size: 25px; 
     color: green; 
     border: 5px;
 }
 
-
-
-/*--------footer-----------
-
-#footer {
+@media (min-width: 361px) and (max-width: 789px){
+    .products_principal img {
+        width: 100vw; 
+        max-width: 90vw;  
+        height: auto;
+        cursor: pointer;
+        margin-bottom: 1.5vw;
+        padding: 1vw 1vw;        
+    } 
+   .products_principal{
+    display : flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-content: center;
+   }
+   
+   .contenido_producto {
+    justify-content: center;
+    align-content: center;
+   }
+   .imagenes-adicionales{
+    display:flex;
+    flex-direction: row ;
+    justify-content: center;
+    align-content: center;
     width: 100%;
-    height: 40vh;
-    object-fit: cover; /*Ajusta el tamaño de la imagen manteniendo la proporción y cortando si es necesario
-    
-}*/
+    max-width: 85%;
+    height:auto;
+    cursor: pointer;
+    margin: 5px;   
+   }
+   .descrpcion_producto {
+    font-size: 16px; 
+}
+
+}
+@media (min-width: 790px){
+    .imagenes-adicionales {
+        display: flex;
+        justify-content: flex-start; 
+        align-items: flex-start;
+        padding-left: 5px;
+    }
+    .imagenes-adicionales img {
+        width: 14%;    
+    }
+    .icono-truck {
+        top: 20px;
+        right: 20px; 
+      
+    }
+}
