se realizo correccion en linea 30 en views/catalogo.ejs linea 30.carecteres fuera de lugar

--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -27,7 +27,7 @@
                         <p class="price"><%= dataProducto.price %> </p>
                         <p class="discount"><%= dataProducto.discount %> </p>
                         <h4 class="description"><%= dataProducto.title %></h4>
-                    </div>npm
+                    </div>
                 </article>             
             <% } ); %>
 
