--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -13,7 +13,12 @@
 <body>
     <%- include('./partials/header.ejs')%>
     <main>
-        <section class="catalogo" > 
+        <section class="catalogo" >
+            <div class="botones">
+                <div class="agregar">
+                    <a href="/agregar-producto" class="agregar-producto">Agregar</a>
+                </div>
+            </div>
             <h3>Productos principales</h3>
             <div class="products">
                 <article>
