Crear un nuevo producto, aplicando CRUD

--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -12,6 +12,7 @@
     </head>
 <body>
     <%- include('./partials/header.ejs')%>
+    <a href="/productos/create">Crear producto</a>
     <main>
         <section class="catalogo" > 
             <h3>Productos principales</h3>
