creacion de botones de alta, modificacion y eliminacion de producto

--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -12,9 +12,14 @@
     </head>
 <body>
     <%- include('./partials/header.ejs')%>
-    <a href="/productos/create">Crear producto</a>
+    
     <main>
         <section class="catalogo" > 
+            <div class="botones">
+                <div class="agregar">
+                    <a href="/productos/create" class="agregar-producto">Agregar</a>
+                </div>
+            </div>
             <h3>Productos principales</h3>
             <div class="products">
 
