--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -26,6 +26,13 @@
                      <p class="descrpcion_producto" >                           
                         <%= idBuscado.descripcion %>
                      </p>
+                     <div class="botones">
+                        <a href="/productos/carrito" class="comprar-producto">Agregar al carrito</a>
+                        <div class="editar-eliminar">
+                            <a href="/productos/edit/<%= idBuscado.id %>" class="editar-producto">Editar</a>
+                            <button onclick="eliminarProducto()">Eliminar</button>
+                        </div>
+                    </div>
                 </div>       
             </div>
             <div class="imagenes-adicionales">            
