--- a/src/views/formAltaProducto.ejs
+++ b/src/views/formAltaProducto.ejs
@@ -21,7 +21,7 @@
 
         <h4>Alta de Producto</h4>
     
-        <form action="/productos/create" method="POST" class="formulario">
+        <form action="/productos/create" method="POST" enctype="multipart/form-data" class="formulario">
             <div class="campo">
                 <label for="name">Nombre del Producto:</label>
                 <input type="text" id="name" name="title">
