Se corrige error-se corrige  nombre en el atributo name- en etiqueta Select de la vista formAltaProducto

--- a/src/views/formAltaProducto.ejs
+++ b/src/views/formAltaProducto.ejs
@@ -26,6 +26,14 @@
                 <label for="name">Nombre del Producto:</label>
                 <input type="text" id="name" name="title">
             </div>
+            <div class="campo">
+                <label for="category" class="form-label">Categoría:</label>
+                <select name="category" id="category" class="form-input">
+                    <option value="">Elegí</option>
+                    <option value="visited">visited</option>
+                    <option value="in-sale">in-sale</option>
+                </select>
+            </div>
     
             <div class="campo">
                 <label for="price">Precio:</label>
@@ -51,6 +59,7 @@
                 <input class="btn-cancelar" type="submit" value="Cancelar">
                 <input class="btn-guardar" type="submit" value="Guardar">
             </div>
+            
         </form>
     
     </div>
