--- a/src/views/formAltaProducto.ejs
+++ b/src/views/formAltaProducto.ejs
@@ -29,7 +29,7 @@
             <div class="campo">
                 <label for="category" class="form-label">Categoría:</label>
                 <select name="category" id="category" class="form-input">
-                    <option value="">Elegí</option>
+                    <option value="">Elegí una opción</option>
                     <option value="visited">visited</option>
                     <option value="in-sale">in-sale</option>
                 </select>
@@ -37,7 +37,7 @@
     
             <div class="campo">
                 <label for="price">Precio:</label>
-                <input type="number" id="price" name="price" step="0.01">
+                <input type="text" id="price" name="price">
             </div>
     
             <div class="campo">
@@ -51,8 +51,8 @@
             </div>
 
             <div class="campo">
-                <label for="image">Descuento:</label>
-                <input type="text" id="image" name="descuont" class="input-img">
+                <label for="descount">Descuento:</label>
+                <input type="text" id="descount" name="descuont">
             </div>
     
             <div class="botones">
