--- a/src/views/formEdicionProducto.ejs
+++ b/src/views/formEdicionProducto.ejs
@@ -21,10 +21,10 @@
 
             <h4>Edición de Producto</h4>
     
-            <form action="" method="post" class="formulario">
+            <form action="/productos/edit/<%=idBuscado.id%>?_method=PUT" method="POST" enctype="multipart/form-data" class="formulario" >
                 <div class="campo">
                     <label for="name">Nombre del Producto:</label>
-                    <input type="text" id="name" name="name" class="form-input" value="<%= idBuscado.name %>">
+                    <input type="text" id="name" name="title" class="form-input" value="<%= idBuscado.title %>">
                 </div>
     
                 <div class="campo">
@@ -34,17 +34,17 @@
     
                 <div class="campo">
                     <label for="price">Precio:</label>
-                    <input type="number" id="price" name="price" step="0.01" class="form-input" value="<%= idBuscado.price %>">
+                    <input type="text" id="price" name="price" step="0.01" class="form-input" value="<%= idBuscado.price %>">
                 </div>
     
                 <div class="campo">
                     <label for="description">Descripción:</label>
-                    <textarea id="description" name="description" rows="4" class="form-input" value="<%= idBuscado.description %>"></textarea>
+                    <textarea id="description" name="descripcion" rows="4" class="form-input" ><%= idBuscado.descripcion %></textarea>
                 </div>
     
                 <div class="campo">
                     <label for="image">Imagen:</label>
-                    <input type="file" id="image" name="image" accept="image/*" class="input-img" class="form-input" value="<%= idBuscado.image %>">
+                    <input type="file" id="image" name="img" accept="image/*" class="input-img" class="form-input" value="<%= idBuscado.img %>">
                 </div>
     
                 <div class="botones">
