--- a/src/views/formAltaProducto.ejs
+++ b/src/views/formAltaProducto.ejs
@@ -26,12 +26,13 @@
                 <label for="name">Nombre del Producto:</label>
                 <input type="text" id="name" name="title">
             </div>
+
             <div class="campo">
                 <label for="category" class="form-label">Categoría:</label>
-                <select name="category" id="category" class="form-input">
+                <select name="category" id="category"  class="options">
                     <option value="">Elegí una opción</option>
-                    <option value="visited">visited</option>
-                    <option value="in-sale">in-sale</option>
+                    <option value="visited">Productos Principales</option>
+                    <option value="in-sale">En Oferta</option>
                 </select>
             </div>
     
@@ -44,15 +45,15 @@
                 <label for="description">Descripción:</label>
                 <textarea id="description" name="descripcion" rows="4"></textarea>
             </div>
-    
-            <div class="campo">
-                <label for="image">Imagen:</label>
-                <input type="file" id="image" name="img" accept="image/*" class="input-img">
-            </div>
 
             <div class="campo">
                 <label for="descount">Descuento:</label>
                 <input type="text" id="descount" name="descuont">
+            </div>
+    
+            <div class="campo">
+                <label for="image">Imagen:</label>
+                <input type="file" id="image" name="img" accept="image/*" class="input-img">
             </div>
     
             <div class="botones">
