--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,66 +4,7 @@
     box-sizing: border-box;
 }
 
-/*----------Header-----------
 
-header{
-  background-color: #f5c597;
-  padding: 10px;
-  border-bottom: solid 4px #d0b6b7;
-}
-
-.redes{
-  position: absolute;
-  top: 15px;
-  left: 10px;
-}
-
-header i{
-  color: #859bb2;
-  font-size: 20px;
-  margin-right: 7px;
-  border: #d0b6b7 solid 1px;
-  border-radius:30%;
-  padding: 4px;
-  box-shadow: 1px 2px 6px #859bb2;
-}
-
-.nav-bar{
-  display: flex;
-  justify-content: center;
-}
-
-.enlaces{
-  display: flex;
-  list-style-type: none;
-  margin-right: 20px;
-}
-
-li{
-  margin-right: 10px;
-}
-.logo{
-  width: 190px;
-  height: 190px;
-  text-align: center;
-}
-
-/*---------Foter----------
-
-footer{
-  background-color:white;
-  margin-bottom: 10px;
-  border-top: solid 4px #d0b6b7;
-  padding-top: 25px;
-  padding-bottom: 10px;
-}
-
-footer h5{
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  background-color: #cac2c0;
-}*/
 
 body {
     background-image: url(../img/HebraLibreFondo.jpg);
@@ -73,7 +14,7 @@ body {
 
 .form-login{
     width: 400px;
-    background: #f5c597;
+    background: #f7d9bb;
     padding: 30px;
     margin: auto;
     margin-top: 100px;
@@ -85,10 +26,11 @@ body {
 }
 
 .form-login h5{
-    font-size: 28px;
+    font-size: 24px;
     margin-bottom: 20px;
     font-family: 'roboto';
     text-align: center;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
 }
 
 .contenedor-password{
@@ -104,22 +46,17 @@ body {
 .input-text{
     width: 100%;
     background: white;
-    padding: 10px;
+    padding: 8px;
     border-radius: 4px;
-    margin-bottom: 10px;
+    margin-bottom: 16px;
     border: 2px solid #d0b6b7;
-    font-family: 'Roboto', sans-serif;
-    font-size: 22px;
+    font-family: 'calibri';
+    font-size: 18px;
 }
 
-.button_recuperar{
-    width: 175px;
-    text-align: left;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    line-height: 20px;
-    color: rgb(19, 38, 206);
-    
+::placeholder{
+    color: 	 #b3b3b3;
+    font-size: 16px;
 }
 
 .button_recordar{
@@ -138,57 +75,46 @@ body {
   font-size: 18px;
 }
 
+.estilo-label:hover{
+    font-weight: bold;
+}
+
 
 .button_ingresar{
     width: 100%;
-    background: #9bc6f9;
+    background: #569ef5;
     border: 2px;
-    padding: 12px;
+    padding: 10px;
     color: white;
     margin: 16px 0;
-    font-size: 22px;
+    font-size: 18px;
 }
 
-/*----------Header-----------*/
+.button_ingresar:hover{
+    background-color: #6eacf7;
+}
 
-header{
-    background-color: #f5c597;
-    padding: 10px;
-    border-bottom: solid 4px #d0b6b7;
+
+
+/* Media Queries*/
+
+@media ( max-width: 767px ) {
+  .form-login{
+      max-width: 90%;
+      margin-top: 20px;
+      margin-bottom: 20px;
   }
-  
-  .redes{
-    position: absolute;
-    top: 15px;
-    left: 10px;
+  .form-register h5 {
+      font-size: 18px;
   }
-  
-  header i{
-    color: #859bb2;
-    font-size: 20px;
-    margin-right: 7px;
-    border: #d0b6b7 solid 1px;
-    border-radius:30%;
-    padding: 4px;
-    box-shadow: 1px 2px 6px #859bb2;
+  .form-register .botom{
+      font-size: 14px;
   }
-  
-  .nav-bar{
-    display: flex;
-    justify-content: center;
+
+}
+
+@media ( min-width: 768px ) {
+  .form-login{
+      max-width: 60%;
   }
-  
-  .enlaces{
-    display: flex;
-    list-style-type: none;
-    margin-right: 20px;
-  }
-  
-  li{
-    margin-right: 10px;
-  }
-  .logo{
-    width: 190px;
-    height: 190px;
-    text-align: center;
-  }
+}
