--- a/public/css/register.css
+++ b/public/css/register.css
@@ -14,23 +14,34 @@ body {
 
 .form-register {
     width: 400px;
-    background: #f5c597;
+    background: #f7d9bb;
     padding: 30px;
     margin: auto;
     margin-top: 100px;
     border-radius: 4px;
     font-family: 'Roboto', sans-serif;
     color: white;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .form-register h4 {
     font-size: 22px;
     margin-bottom: 20px;
     text-align: center;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
 }
 
+label{
+    color:black;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+::placeholder{
+    color: 	 #b3b3b3;
+    font-size: 16px;
+}
 .controls {
     width: 100%;
     background: white;
@@ -39,21 +50,36 @@ body {
     margin-bottom: 16px;
     border: 1px solid #d0b6b7;
     font-family: 'calibri';
-    font-size: 18px;
+    font-size: 16px;
+}
+
+input.form-img{
+    color: black;
+    border: 1px solid #d0b6b7;
+    border-radius: 4px;
+    width: 100%;
+    padding: 10px;
+    background-color: white;
 }
 
 .form-register p {
     height: 40px;
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 40px;
+    color: black;
+    font-weight: bold;
 }
 
 .form-register a {
     color: #0e74f1;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
     text-decoration: underline;
+}
+
+.form-register a:hover{
+    color: #6eacf7;
 }
 
 .form-register .botom {
@@ -67,6 +93,10 @@ body {
 
 }
 
+.form-register .botom:hover{
+    background-color: #6eacf7;
+}
+
 
 /* Media Queries*/
 
@@ -75,6 +105,7 @@ body {
         max-width: 90%;
         margin-top: 20px;
         margin-bottom: 20px;
+        padding: 20px 10px;
     }
     .form-register h4 {
         font-size: 18px;
@@ -84,6 +115,20 @@ body {
     }
     .form-register .botom{
         font-size: 14px;
+    }
+    .controls {
+        padding: 5px;
+        margin-bottom: 14px;
+        font-size: 14px;
+    }
+    input.form-img{
+        padding: 5px;
+    }
+    .form-register .botom {
+        
+        padding: 8px;
+        font-size: 14px;
+    
     }
 
 }
