--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,47 +7,24 @@
         <link rel="stylesheet"  href ="/css/login.css ">
         <link href="/css/header-footer.css" rel="stylesheet">
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@0,100;0,400;1,500&family=Roboto:wght@100&display=swap" rel="stylesheet">
     </head>
 
     <body>
-  
-        <header>
-            <!--div class="redes">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-pinterest"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
-            </div-->
-            <div class="nav-bar">
-                    <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
-            </div>
-            <div class="nav-bar">
-                <ul class="enlaces">
-                    <li><a href=  "/"   >Home</a></li>
-                    <li><a href='/productos/catalogo' >Productos</a></li>
-                    <li><a href='/productos/carrito'  >Carrito de Compras</a></li>
-                    <li><a href='/usuarios/register'  >Registrarse</a></li>
-                    <li><a href='/contact'  >Contacto</a></li>
-                    <!--li><a href='/sobre-nosotros'  >Sobre Mi</a></li-->
-                </ul>
-            </div>       
-        </header>
-  
-        <div class="col-sm-6 col-sm-offset-3">
-            <form class ="form-login" id="login"  method="GET">
-            <h5>Sign in to Hebra Libre</h5>
+        <%- include('./partials/header.ejs')%>
+        <div >
+            <form action="#" method="GET" class ="form-login" id="login">
+            <h5>Bienvenido a Hebra Libre</h5>
 
             <div class="form-group">
-            <input class="input-text" type="text" name="" placeholder="Usuario" id="username" data-testid="emailInput" value="">
+            <input class="input-text" type="text" name="email" placeholder="Email" id="username" data-testid="emailInput" value="">
             </div>
         
-            <div class="form-group"> <!--class="contenedor-password"-->
-                <input class="input-text" name="" type="password" placeholder="Contraseña" autocomplete="false" id="password">
-                <!--img src="../img/close.png" class="icon"-->
+            <div class="form-group">
+                <input class="input-text" name="password" type="password" placeholder="Contraseña" autocomplete="false" id="password">
             </div>
 
             <div class="contenedor-recuperar">
@@ -55,17 +32,11 @@
                 <input type="checkbox" id="recordar" name="recordar">
                 <label for="recordar" class="estilo-label">Recordarme</label>
                 <br>
-                <!--<p><a href=/recuperar-contrasenia>¿Olvidaste tu contraseña?</a></p>-->
-                <!--button id="ResetPassword" class="button_recuperar" type="button" data-testid="resetPasswordButton">
-                <span class="button_text">¿Olvidaste tu contraseña? <a href="/recuperar-contraseña"></a></span>
-                </button-->
-                <!--button class="button_recordar"><i class="fa fa-square-o">  Recordarme</i></button-->
             </div>
             
-
             <div class="form-group">
                 <button id="SubmitLoginButton" class="button_ingresar" type="submit" data-testid="submitButton">
-                <span class="button_text">Ingresar</span>
+                    <span class="button_text">Ingresar</span>
                 </button>
             </div>
         
