--- a/src/views/formEdicionProducto.ejs
+++ b/src/views/formEdicionProducto.ejs
@@ -26,6 +26,10 @@
                     <label for="name">Nombre del Producto:</label>
                     <input type="text" id="name" name="title" class="form-input" value="<%= idBuscado.title %>">
                 </div>
+                <div class="campo">
+                    <label for="name">color del Producto:</label>
+                    <input type="text" id="name" name="colors" class="form-input" value="<%= idBuscado.colors %>">
+                </div>
     
                 <div class="campo">
                     <label for="category">Categoría:</label>
