Correccion funcionalidad del boton Eliminar en la vista Producto. Tambien se agrega enlace al logo del header para direccionar a la home

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,7 +8,7 @@
             <a href="https://wa.me/+5493884175520" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="nav-bar">
-                <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
+                <a href="/"><img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo"></a>
         </div>
         <div class="nav-bar">
             <div class="burger-menu">
