--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -35,7 +35,9 @@
                             <a href="/productos/carrito" class="comprar-producto">Agregar al carrito</a>
                             <div class="editar-eliminar">
                                 <a href="/productos/edit/<%= idBuscado.id %>" class="editar-producto">Editar</a>
-                                <button onclick="eliminarProducto()">Eliminar</button>
+                                <form action="/productos/delete/<%= idBuscado.id %>?_method=DELETE" method="post">
+                                    <button onclick="eliminarProducto()">Eliminar</button>
+                                </form>
                             </div>
                         </div>
                     </div>
